# gaia

./: .gitignore  CMakeLists.txt  README.md  gaia.sln
main_build_test/: main.cpp
tartarus/: CMakeLists.txt
tartarus/include/: Individual.h  population.h  setings.h  tartarus.h
tartarus/sorce/: brain.cpp  population.cpp  tartarus.cpp
tartarus/tartarus/: tartarus.vcxproj  tartarus.vcxproj.filters
tartarus/tartarus/include/: Individual.h  brain.h  dna.h  dynamicIndividual.h  dynamicdna.h  normalizedIndividual.h  population.h  random.h  setings.h  tartarus.h
tartarus/tartarus/sorce/: Individual.cpp  brain.cpp  dna.cpp  dynamicIndividual.cpp  dynamicdna.cpp  normalizedIndividual.cpp  random.cpp  tartarus.cpp
test/: CMakeLists.txt  gaia.vcxproj
test/include/: pch.h
test/sorce/: test.cpp
